--- a/Books Project/Pages/Admin/Buys.razor
+++ b/Books Project/Pages/Admin/Buys.razor
@@ -2,7 +2,7 @@
 @inherits OwningComponentBase<IBuyRepository>
 
 <BuyTable TableTitle ="Uncollected Purchases" Buys ="UncollectedPurchases" 
-          ButtonLabel="Collected" BuySelected="CollectPurchase"></BuyTable>
+          ButtonLabel="Shipped" BuySelected="CollectPurchase"></BuyTable>
 
 <BuyTable TableTitle="Collected Purchases" Buys="CollectedPurchases" 
           ButtonLabel="Reset" BuySelected="ResetPurchase"></BuyTable>
