--- a/Books Project/Pages/Admin/BuyTable.razor
+++ b/Books Project/Pages/Admin/BuyTable.razor
@@ -7,33 +7,41 @@
 
     <tbody>
         @if (Buys?.Count() > 0)
+        {
+            @foreach (Buy b in Buys)
             {
-                @foreach (Buy b in Buys)
+        <tr>
+            <td>@b.Name</td>
+            <td>@b.Zip</td>
+            <th>Book</th>
+            <th>Quantity</th>
+
+            <td>
+                <button class="btn btn-sm btn-danger" @onclick="(x => BuySelected.InvokeAsync(b.OrderId))">
+                    @ButtonLabel
+                </button>
+            </td>
+        </tr>
+
+                
+
+                @foreach (BasketLineItem bli in b.Lines)
                 {
                     <tr>
-                        <td>@b.Name</td>
-                        <td>@b.Zip</td>
-                        <th>Book</th>
-                        <th>Quantity</th>
+                        <td colspan="2"></td>
+                        <td>@bli.Book.Title</td>
+                        <td>@bli.Quantity</td>
+
                     </tr>
-
-                    @foreach (BasketLineItem bli in b.Lines)
-                    {
-                        <tr>
-                            <td colspan="2"></td>
-                            <td>@bli.Book.Title</td>
-                             <td>@bli.Quantity</td>
-
-                        </tr>
-                    }
                 }
             }
-            else
-            {
-                <tr>
-                    <td colspan="5" class="text-center">No Orders</td>
-                </tr>
-            }
+        }
+        else
+        {
+            <tr>
+                <td colspan="5" class="text-center">No Orders</td>
+            </tr>
+        }
     </tbody>
 </table>
 
@@ -46,7 +54,7 @@
     public IEnumerable<Buy> Buys { get; set; }
 
     [Parameter]
-    public string ButtonLabel { get; set; } = "Collected";
+    public string ButtonLabel { get; set; } = "Shipped";
 
     [Parameter]
     public EventCallback<int> BuySelected { get; set; }
