--- a/Books Project/Pages/BuyCompleted.cshtml
+++ b/Books Project/Pages/BuyCompleted.cshtml
@@ -2,7 +2,10 @@
 @model Books_Project.Pages.BuyCompletedModel
 @{
 }
-
+@*Extra Bootstrap*@
+<div class="alert alert-success" role="alert">
+    ORDER RECIEVED!
+</div>
 <div class="text-center">
     <h2>Thanks! Your order has been submitted!</h2>
     <a class="btn btn-primary" asp-controller="Home">Return Home</a>
