--- a/Books Project/Pages/Admin/BuyTable.razor
+++ b/Books Project/Pages/Admin/BuyTable.razor
@@ -23,8 +23,15 @@
                             <td colspan="2"></td>
                             <td>@bli.Book.Title</td>
                              <td>@bli.Quantity</td>
+                            
+                            <td>
+                                <button class="btn btn-sm btn-danger" @onclick="(x => BuySelected.InvokeAsync(b.OrderId))">
+                                    @ButtonLabel
+                                </button>
+                            </td>
+                            
 
-                        </tr>
+                       </tr>
                     }
                 }
             }
