--- a/Books Project/Pages/Admin/Books.razor
+++ b/Books Project/Pages/Admin/Books.razor
@@ -2,7 +2,8 @@
 @page "/admin"
 @inherits OwningComponentBase<IBooksRepository>
 
-<table class="table table-sm table-striped table-bordered">
+
+<table class="table table-sm table-striped table-bordered table-hover">
     <thead>
         <tr>
             <th>Book Id</th>
