--- a/Books Project/Pages/Admin/Index.cshtml
+++ b/Books Project/Pages/Admin/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@page "/admin"
+
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 @model Books_Project.Pages.Admin.IndexModel
 @{
 }
